Fix scrollbar

--- a/app/assets/stylesheets/shared_accesses.scss
+++ b/app/assets/stylesheets/shared_accesses.scss
@@ -1,15 +1,23 @@
 #shared-access-form {
-  overflow: auto;
-  max-height: 500px;
 
-  th {
-    position: sticky;
-    top: 0;
-    background: white;
+  .table-scrollbar-wrapper {
+    overflow: auto;
+    max-height: 480px;
   }
 
   input.search-bar {
     width: 100%;
+  }
+
+  /* Scrollbar Styling */
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: dimgrey;
   }
 }
 
